Bug 66563 - [SNA IVB] External monitor (VGA1) unusable if plugged in after xorg start
Summary: [SNA IVB] External monitor (VGA1) unusable if plugged in after xorg start
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: Other Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 66778 67068 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-07-03 21:16 UTC by tka
Modified: 2013-07-19 08:20 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log when monitor was plugged-in at boot (28.53 KB, text/plain)
2013-07-03 21:18 UTC, tka
no flags Details
Xorg.0.log when monitor was plugged-in later (28.03 KB, text/plain)
2013-07-03 21:18 UTC, tka
no flags Details
dmesg when monitor was plugged-in at boot time (53.44 KB, text/plain)
2013-07-03 21:19 UTC, tka
no flags Details
dmesg when monitor was plugged-in later (53.22 KB, text/plain)
2013-07-03 21:20 UTC, tka
no flags Details
dmesg when monitor was plugged-in at boot time (drm.debug=6) (87.45 KB, text/plain)
2013-07-03 21:41 UTC, tka
no flags Details
dmesg when monitor was plugged-in later (drm.debug=6) (105.45 KB, text/plain)
2013-07-03 21:41 UTC, tka
no flags Details
Always initialise the gamma ramp for a CRTC (2.82 KB, patch)
2013-07-03 21:46 UTC, Chris Wilson
no flags Details | Splinter Review

Description tka 2013-07-03 21:16:33 UTC
After upgrading from xf86-video-intel-2.21.10 to 2.21.11, the external monitor I attach to my laptop (VGA1) shows only some red pixels on black background if I attach the monitor after xorg started. If the monitor is attached during boot, it works fine. On LVDS1 and on screenshots, the image is correct. Therefore, the issue seems to be the output and not the rendering.

Actually, you can recognize window borders and some (originally black) text in the red pixels. The black background in the terminal emulator is displayed completely red.

The issue is still present in git (commit 1445a62da8a08acd8a732176d085fd098f68cec3). Bisecting the commits between 2.21.10 and 2.21.11 locates the problem between commit 362b0dc6a3b1692b752d8f250075ccc81debfca3 (good) and commit 362b0dc6a3b1692b752d8f250075ccc81debfca3 (bad). Trying any of the commits in between results in a black screen on LVDS1 and an unusable X.
Comment 1 tka 2013-07-03 21:18:13 UTC
Created attachment 81988 [details]
Xorg.0.log when monitor was plugged-in at boot
Comment 2 tka 2013-07-03 21:18:56 UTC
Created attachment 81989 [details]
Xorg.0.log when monitor was plugged-in later
Comment 3 tka 2013-07-03 21:19:55 UTC
Created attachment 81990 [details]
dmesg when monitor was plugged-in at boot time
Comment 4 tka 2013-07-03 21:20:20 UTC
Created attachment 81991 [details]
dmesg when monitor was plugged-in later
Comment 5 Chris Wilson 2013-07-03 21:25:35 UTC
You pasted the same commit for good/bad. Can you please verify your bisect?
Comment 6 Chris Wilson 2013-07-03 21:28:07 UTC
They need to be drm.debug=6 dmesgs. Can you also please attach the output from intel_reg_dumper for good/bad?
Comment 7 tka 2013-07-03 21:30:05 UTC
(In reply to comment #5)
> You pasted the same commit for good/bad. Can you please verify your bisect?

Sorry, the bad commit is d7be3df2fe632bbc8e4f09709cf3cf7a5ef61015.
Comment 8 tka 2013-07-03 21:41:01 UTC
Created attachment 81993 [details]
dmesg when monitor was plugged-in at boot time (drm.debug=6)
Comment 9 tka 2013-07-03 21:41:36 UTC
Created attachment 81994 [details]
dmesg when monitor was plugged-in later (drm.debug=6)
Comment 10 Chris Wilson 2013-07-03 21:46:38 UTC
Created attachment 81995 [details] [review]
Always initialise the gamma ramp for a CRTC

Can you please test this patch? Thanks.
Comment 11 tka 2013-07-03 21:54:40 UTC
(In reply to comment #10)
> Created attachment 81995 [details] [review] [review]
> Always initialise the gamma ramp for a CRTC
> 
> Can you please test this patch? Thanks.

Ok, that fixes the bug. Thanks.
Comment 12 Chris Wilson 2013-07-03 21:57:16 UTC
commit ebf4517a0bb510e406795c169aa21b7cc615ed31
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Jul 3 22:44:46 2013 +0100

    sna: Always read back the gamma, even for a inactive CRTC
    
    Even if the CRTC is inactive, we still need to initialise the gamma
    tables.
    
    Reported-and-tested-by: Timo Kamph <timo@kamph.org>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=66563
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 13 Chris Wilson 2013-07-11 10:11:38 UTC
*** Bug 66778 has been marked as a duplicate of this bug. ***
Comment 14 Chris Wilson 2013-07-19 08:20:58 UTC
*** Bug 67068 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.