sna: Always read back the gamma, even for a inactive CRTC

Even if the CRTC is inactive, we still need to initialise the gamma
tables.

Reported-and-tested-by: Timo Kamph <timo@kamph.org>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=66563
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>